fix source code overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -274,6 +274,7 @@ div#content > h1:first-child { display: none; }
     background-color: #263238;
     color: #ffffff;
     padding-left: 5px;
+    overflow: scroll;
 }
 .slicknav_menu {
 	display:none;
